# shared-resources

./: .pre-commit-config.yaml  Dockerfile  GRCh37_chrom_sizes.json  Makefile  README.md  acmg_map.json  aion_version.json  clinical_genome.json  clinical_genome_minus_sf.json  inheritance_fe_mapping.json  maintenance  maintenance.json  mendelian_genes.json  mendelian_genes_wo_secondary.json  pyproject.toml  rosetta_hgnc_id_to_symbol.json  rosetta_symbol_to_hgnc_id.json  rosetta_symbol_to_hgnc_id.tsv  sa_maintenance.json  sa_version.json  secondary_findings.json  setup.py
.github/workflows/: test.yml
shared_resources/data/: hg19_supported_genes.json  hg38_supported_genes.json  rosetta_hgnc_id_to_symbol.json  rosetta_symbol_to_hgnc_id.json
shared_resources/dictionaries/: __init__.py  dictionaries.py  utils.py
shared_resources/dictionaries/tests/: test_dictionaries.py
